<resources>
    <string name="app_name">BudgetLens</string>
    <string name="email_sent">A code has been sent to your email address</string>
    <string name="invalid_email_address">Email address is invalid</string>
    <string name="code_message">Code cannot be less than 6 digits</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="or">Or</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="google">Google</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="username">Username</string>
    <string name="user_profile_name">%1$s</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="global_preferences">global_preferences</string>
    <string name="item_name">%1$s</string>
    <string name="category_name">%1$s</string>
    <string name="category">Category</string>
    <string name="friend_initial">%1$s</string>
    <string name="friend_first_name">%1$s</string>
    <string name="friend_last_name">%1$s</string>
    <string name="friend_email">%1$s</string>
    <string name="trade_relation">%1$s</string>
    <string name="trade_amount">%1$f</string>
    <string name="items_total">%.2f</string>
    <string name="date">%1$f</string>
    <string name="price">$%1$.2f</string>
    <string name="price_title">Price</string>
    <string name="minimum_price">Min Price</string>
    <string name="maximum_price">Max Price</string>
    <string name="merchant_name">%1$s</string>
    <string name="merchant">Merchant</string>
    <string name="merchant_selection">Select Merchant</string>
    <string name="category_selection">Select Category</string>
    <string name="location_selection">Select Location</string>
    <string name="currency_selection">Select Currency</string>
    <string name="coupon_selection">Select Coupon</string>
    <string name="total_selection">Select Total</string>
    <string name="coupon">Coupon</string>
    <string name="coupon_amount">%1$.2f</string>
    <string name="receipt_coupon">Coupon($):</string>
    <string name="location">Location</string>
    <string name="tax">Tax</string>
    <string name="tax_amount">%1$.2f</string>
    <string name="receipt_tax">Tax($):</string>
    <string name="tip">Tip</string>
    <string name="tip_amount">%1$.2f</string>
    <string name="receipt_tip">Tip($):</string>
    <string name="total_price">Total</string>
    <string name="currency">Currency</string>
    <string name="scan_date">%1$s</string>
    <string name="receipt_date">%1$s</string>
    <string name="receipt_scan_date">%1$s</string>
    <string name="receipt_details">%1$s</string>
    <string name="receipt_location">Location:</string>
    <string name="receipt_location_text">%1$s</string>
    <string name="receipt_image_thumbnail_preview_description">Receipt Image Thumbnail Preview</string>
    <string name="merchant_image_logo_thumbnail_preview_description">Merchant Image Logo Thumbnail Preview</string>
    <string name="budget_button_logo_thumbnail_preview_description">Budget Button Logo Thumbnail Preview</string>
    <string name="close_dialog_preview_description">Close Dialog.</string>
    <string name="total">%1$.2f</string>
    <string name="total_amount">Total Amount($): %1$.2f</string>
    <string name="total_amount_currency">Total Amount($):</string>
    <string name="total_items_currency">Total:</string>
    <string name="choose_friends">Choose the participants</string>
    <string name="item_frequency">Purchased Frequency: %s</string>
    <string name="added_by">Added by</string>
    <string name="view_items">View Items</string>
    <string name="receipt_items_list">List of Receipts Items</string>
    <string name="split_total">Split by Total</string>
    <string name="split_item">Split by Item</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add_date">Add Important Date</string>
    <string name="edit">Edit</string>
    <string name="split_bill">Split Bill</string>
    <string name="home">Home</string>
    <string name="all">ALL</string>
    <string name="receipts">Receipts</string>
    <string name="budget">Budget</string>
    <string name="friends">Friends</string>
    <string name="items">Items</string>
    <string name="sort_by">Sort By</string>
    <string name="request">Friend Requests</string>
    <string name="add_friend">Add</string>
    <string name="receipts_sort">Receipts Sort</string>
    <string name="items_sort">Items Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="filter">Filter</string>
    <string name="active_filters">Active Filters</string>
    <string name="date_title">Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="search">Search</string>
    <string name="title_activity_settings">settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="split_value">%1$s</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_sub_category">New Sub Category</string>

    <string name="relatedReceipt">View Related Receipt</string>
    <string name="important_date_date">%1$s</string>
    <string name="reminder">Reminders</string>
    <string name="add">+ADD</string>
    <string name="icons">an icon</string>
    <string name="starred_categories">%1$s</string>
    <string name="create">+ CREATE</string>
    <string name="delete_sub_category">Delete Sub Category</string>
    <string name="delete_this_category">Delete this Category?</string>
    <string name="welcome_message">Welcome to Budget Lens, this is a Beta version. Please subscribe to our Concordia team for further information. </string>
    <string name="confirm">Confirm</string>
    <string name="save_filter">Save</string>
    <string name="label">label</string>
    <string name="percentage_left">%1$s</string>
    <string name="amount_left">%1$s</string>
    <string name="no_items_found">No items found.</string>
    <string-array name="category_place_holder">
        <item>Groceries</item>
        <item>Entertainment</item>
        <item>Education</item>
    </string-array>
    <attr name="ItemSortChipStyle" format="reference" />
    <attr name="AllChipStyle" format="reference" />
</resources>
