<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".receipts.ReceiptsListPageActivity">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="#FFFBFE"
        app:layout_constraintBaseline_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/top_app_bar"
        app:title="Items" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/item_info"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cart_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/icons"
                android:scaleX="2.5"
                android:scaleY="2.5"
                android:src="@drawable/ic_baseline_shopping_cart_24" />


            <TextView
                android:id="@+id/item_info_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/price"
                android:textSize="36sp"
                android:textStyle="bold"
                app:drawableRightCompat="@drawable/ic_baseline_edit_24" />

            <TextView
                android:id="@+id/item_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableRightCompat="@drawable/ic_baseline_edit_24" />


            <LinearLayout
                android:id="@+id/llAddedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/added_by"
                    android:textColor="#8A444939"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/item_original_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/user_profile_name"
                    android:textColor="#8A444939"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/item_page_scan_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scan_date"
                android:textColor="#8A444939"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="3">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/category">

                    <AutoCompleteTextView
                        android:id="@+id/category_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:text="@string/category_name"
                        tools:ignore="LabelFor" />


                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/reminders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.5"
                        android:backgroundTint="#6750A4"
                        android:contentDescription="@string/icons"
                        android:src="@drawable/ic_baseline_doorbell_24" />

                    <TextView
                        android:layout_width="186dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.5"
                        android:text="@string/reminder"
                        android:textColor="#6750A4"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="0.5"
                        android:backgroundTint="@android:color/transparent"
                        android:padding="0dp"
                        android:text="@string/add"
                        android:textColor="#6750A4"
                        android:textSize="15sp" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/important_dates_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="5dp" />

            </LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/view_related_items"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/item_info_delete"
            android:layout_alignParentStart="true"
            android:layout_marginStart="103dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="23dp"
            android:backgroundTint="#6750A4"
            android:gravity="center"
            android:text="@string/relatedReceipt" />

        <Button
            android:id="@+id/item_info_delete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="104dp"
            android:layout_marginBottom="101dp"
            android:backgroundTint="#A45050"
            android:gravity="center"
            android:text="@string/delete" />


    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>