<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pop_up"
    tools:context=".category.DeleteSubCategoryPopUpActivity">

    <ImageView
        android:id="@+id/garbage_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_auto_delete_24" />

    <TextView
        android:id="@+id/delete_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/delete_sub_category"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/garbage_icon"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/garbage_icon"
        app:layout_constraintTop_toBottomOf="@+id/garbage_icon" />

    <TextView
        android:id="@+id/delete_question"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_this_category"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/delete_title"
        app:layout_constraintStart_toStartOf="@+id/delete_title"
        app:layout_constraintTop_toBottomOf="@+id/delete_title" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#DED5EA"
        android:text="@android:string/cancel"
        android:textColor="#6750A4"
        app:layout_constraintEnd_toStartOf="@+id/confirm_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_question" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#DED5EA"
        android:text="@string/confirm"
        android:textColor="#6750A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/delete_question" />

</androidx.constraintlayout.widget.ConstraintLayout>